fix eliminate style for deleted div (toggle) - add style to enhance contrast and spacing between bottons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,10 +24,10 @@ body {
 
 header {
     justify-content: center;
-    background-color:rgb(33, 56, 0) ;
+    background-color:rgb(17, 29, 0) ;
     color: rgb(183, 0, 21);
     border: 0.9rem solid rgb(183, 0, 21);
-    box-shadow: #f83838 0 0.1rem 0.3rem 0.2rem;
+    box-shadow: #ff4848 0 0.1rem 0.3rem 0.2rem,inset 0 0.1rem 0.8rem rgba(255, 255, 55, 0.9);
     width: 98%;
     padding: 0 ;
     border-radius: 2.5rem;
@@ -41,11 +41,12 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width: 95%;
     height: 100%;
+    margin-left: 2.5%;
     background-color: rgb(193, 255, 193);
-    box-shadow: #38cbf8 0 0.1rem 0.3rem 0.2rem;
-    color: rgb(128, 4, 185);
+    box-shadow: #38cbf8 0 0.1rem 0.4rem 0.3rem;
+    color: rgb(79, 143, 0);
     border-radius: 1.5rem;
     padding: 0.5rem;
 }
@@ -128,7 +129,7 @@ header {
 }
 
 #gesturesImg {
-width: 55%;
+    width: 55%;
 min-width: 215px;
 height: auto;;
 }
@@ -213,7 +214,7 @@ th {
   justify-content: center;
   background-color: rgb(193, 255, 193);
   border: 0.5rem solid rgb(131, 53, 175);
-  box-shadow: #38cbf8 0 0.1rem 0.3rem 0.2rem;
+  box-shadow: #38cbf8 0 0.1rem 0.3rem 0.3rem;
   border-radius: 3rem;
   color: rgb(0, 53, 102);
   margin: 1.5rem;
@@ -232,7 +233,8 @@ th {
     margin-bottom: 0.8rem;
     border: 0.2rem solid rgba(255, 86, 182, 0.5);
     border-radius: 1.5rem 1.5rem 0.5rem 0.5rem ;
-    background-color: #033564;  
+    background-color: #033564;
+    box-shadow: inset 0 0.1rem 2rem rgba(255, 255, 55, 0.6)
 }
 
 #choicesOpponent {
@@ -244,12 +246,13 @@ th {
 }
 
 .opponent-button {
-    background-color: rgb(35, 59, 121);
-    border: 0.5rem solid rgb(141, 173, 236);
+    background-color: rgb(31, 53, 109);
+    border: 0.5rem solid rgb(103, 215, 243);
+    box-shadow: #f9f9f9 0 0.1rem 0.3rem 0.2rem;
     border-radius: 50%;
     padding: 0.2rem;
     width: 100%;
-    margin: 2%;
+    margin: 3%;
     cursor: pointer;
     width: 100px;
 }
@@ -273,35 +276,20 @@ button.opponent-button:active {
     box-shadow: #ff0000 0 0.1rem 0.5rem 0.2rem;
     transition: 0.1s;
 }
-.sound-toggle {
-  display: flex;
-  justify-content: end;
-  align-items: flex-end;
-  width: 96%;
-  height: auto;
-  margin-top: 1rem;
-  margin-right: 12.5%;
-  padding: 0.5rem;
-  ;
-  color: rgb(251, 232, 232);
-  background-color: #033564;
-  border-radius: 1.5rem;
-
-}
 
 #toggle-sound {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: fit-content;
-  height: auto;
+  width: 4.5rem;
+  height: 4.5rem;
   font-weight: 900;
-  margin-top: 0.5rem;
+  margin-top: 1.5rem;
   padding: 0.5rem;
   color: rgb(177, 239, 255);
-  background-color: #001b22;
+  background-color: #005964;
   border: 0.35rem solid rgb(255, 182, 223);
-  border-radius: 1.5rem;
+  border-radius: 50%;
   text-align: center;
 }
 
@@ -318,6 +306,7 @@ button.opponent-button:active {
   border-radius: 0.5rem;
   margin-bottom: 1rem;
   margin-top: 0.5rem;
+box-shadow: inset 0 0.1rem 2rem rgba(240, 253, 255, 0.9);
   background-color: #8dffe2;
   border-radius: 0.5rem;
 }
@@ -420,7 +409,8 @@ button.opponent-button:active {
   border: 0.2rem solid rgba(255, 86, 182, 0.5);
   border-radius: 0.5rem 0.5rem 1.6rem 1.6rem;
   width: 100%;
-  height: 100%;
+  height: 50%;
+  box-shadow: inset 0 0.2rem 2rem rgba(254, 239, 225, 0.9);
 }   
 
 .choices {
@@ -439,7 +429,7 @@ button.opponent-button:active {
   border: 0.5rem solid rgb(254, 38, 63);
   border-radius: 50%;
   padding: 0.3rem;
-  margin: 5%;
+  margin: 2.8%;
   cursor: pointer;
   font-size: 2.5rem;
   font-weight: bold;
@@ -487,27 +477,29 @@ button.opponent-button:active {
 }
 
 .player-selection img, .computer-selection img {
-  width: 95%;
+  width: 90%;
   border-radius: 50%;
   margin: 0.5rem;
+  flex-grow: 0.5;
 }
 
 footer {
   display: flex;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
   width: 95%;
   height: 2.5vh;
   padding: 2rem ;
   background-color: rgb(33, 56, 0);
   border: 0.8rem solid rgb(156, 2, 20);
-  box-shadow: #f83838 0 0.1rem 0.3rem 0.2rem;
-  border-radius: 3rem;
+  box-shadow: #ff4848 0 0.1rem 0.3rem 0.2rem, inset 0 0.1rem 0.8rem rgba(255, 255, 55, 0.9);
+  border-radius: 2.5rem;
   margin-bottom: 1rem;
 }
 
-#copyright {
+footer p{
   color: rgb(193, 255, 193);
   font-weight: bold;
   font-size: 0.8rem;
+
 }
